[package]
name = "bls2brs"
version = "0.1.0"
authors = ["Meshiest <meek.mesh@gmail.com>"]
description = "Website/WASM to convert bls2brs"
repository = "https://github.com/meshiest/bls2brs"
license="ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
bls2brs = { git = "https://github.com/brickadia/bls2brs" }
wasm-bindgen = "0.2.50"
chrono = "0.4.9"
